src/mapgd_0.3/error
pro-file.cc: In member function ‘const string profile_header::decodeextraid(const char&, const size_t&)’:
pro-file.cc:47:37: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  return std::string(1, decodechar[id]);
                                     ^
pro-file.cc: In member function ‘const char profile_header::encodeextraid(const char&, const size_t&)’:
pro-file.cc:84:22: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  return encodechar[id];
                      ^
pro-file.cc: In member function ‘int profile_header::readheader(std::istream*)’:
pro-file.cc:343:22: warning: variable ‘reading_pr’ set but not used [-Wunused-but-set-variable]
  bool notdone_=true, reading_pr=false, reading_id=false;
                      ^
pro-file.cc: In member function ‘void profile::scan(const Locus&, const string&, quartet_t&)’:
pro-file.cc:535:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(j=0; j<atoi(number.c_str() )-1; ++j) it++;
                                      ^
pro-file.cc:540:51: warning: array subscript has type ‘char’ [-Wchar-subscripts]
    q.base[header_.encodeextraid( (count_t)*it, 0) ]++;
                                                   ^
pro-file.cc: In member function ‘profile* profile::open(const char*, const char*)’:
pro-file.cc:802:13: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  if ( mode=="r" ){
             ^
pro-file.cc:815:19: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  } else if (mode=="w"){
                   ^
pro-file.cc:823:19: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  } else if (mode=="wb"){
                   ^
pro-file.cc: In member function ‘profile* profile::open(const char*)’:
pro-file.cc:844:12: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  if (mode=="r"){
            ^
pro-file.cc:852:19: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  } else if (mode=="w") {
                   ^
pro-file.cc:855:19: warning: comparison with string literal results in unspecified behaviour [-Waddress]
  } else if (mode=="wb") {
                   ^
proview.cc: In function ‘int proview(int, char**)’:
proview.cc:136:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (thissample==sample)
                    ^
proview.cc:143:23: error: no matching function for call to ‘profile::header(bool)’
  else out.header(false);
                       ^
proview.cc:143:23: note: candidate is:
In file included from proview.h:15:0,
                 from proview.cc:12:
pro-file.h:245:7: note: void profile::header()
  void header(void) {noheader_=false;};  //!< If header is true pro-file will expect a file to have a header...
       ^
pro-file.h:245:7: note:   candidate expects 0 arguments, 1 provided
proview.cc:162:27: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int x=0; x<in.size(); x++){
                           ^
proview.cc:27:7: warning: unused variable ‘split’ [-Wunused-variable]
  bool split=false;
       ^
make: *** [proview.o] Error 1
